--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,184 @@
+@import url("https://fonts.cdnfonts.com/css/general-sans");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    width: 100dvw;
+    overflow-x: hidden;
+    background-color: #dfdff0;
+    font-family: "General Sans", sans-serif;
 }
+
+
+@layer base {
+    @font-face {
+        font-family: "circular-web";
+        src: url("/fonts/circularweb-book.woff2") format("woff2");
+    }
+
+
+    @font-face {
+        font-family: "general";
+        src: url("/fonts/general.woff2") format("woff2");
+    }
+
+    @font-face {
+        font-family: "robert-medium";
+        src: url("/fonts/robert-medium.woff2") format("woff2");
+    }
+
+    @font-face {
+        font-family: "robert-regular";
+        src: url("/fonts/robert-regular.woff2") format("woff2");
+    }
+
+    @font-face {
+        font-family: "zentry";
+        src: url("/fonts/zentry-regular.woff2") format("woff2");
+    }
+  :root {
+        --background: 0 0% 100%;
+        --foreground: 240 10% 3.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 240 10% 3.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 240 10% 3.9%;
+        --primary: 240 5.9% 10%;
+        --primary-foreground: 0 0% 98%;
+        --secondary: 240 4.8% 95.9%;
+        --secondary-foreground: 240 5.9% 10%;
+        --muted: 240 4.8% 95.9%;
+        --muted-foreground: 240 3.8% 46.1%;
+        --accent: 240 4.8% 95.9%;
+        --accent-foreground: 240 5.9% 10%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 240 5.9% 90%;
+        --input: 240 5.9% 90%;
+        --ring: 240 10% 3.9%;
+        --chart-1: 12 76% 61%;
+        --chart-2: 173 58% 39%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
+        --radius: 0.5rem;
+    }
+  .dark {
+        --background: 240 10% 3.9%;
+        --foreground: 0 0% 98%;
+        --card: 240 10% 3.9%;
+        --card-foreground: 0 0% 98%;
+        --popover: 240 10% 3.9%;
+        --popover-foreground: 0 0% 98%;
+        --primary: 0 0% 98%;
+        --primary-foreground: 240 5.9% 10%;
+        --secondary: 240 3.7% 15.9%;
+        --secondary-foreground: 0 0% 98%;
+        --muted: 240 3.7% 15.9%;
+        --muted-foreground: 240 5% 64.9%;
+        --accent: 240 3.7% 15.9%;
+        --accent-foreground: 0 0% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 240 3.7% 15.9%;
+        --input: 240 3.7% 15.9%;
+        --ring: 240 4.9% 83.9%;
+        --chart-1: 220 70% 50%;
+        --chart-2: 160 60% 45%;
+        --chart-3: 30 80% 55%;
+        --chart-4: 280 65% 60%;
+        --chart-5: 340 75% 55%;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes custom-underline {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+@layer utilities {
+    .custom-underline {
+        display: inline-block;
+        position: relative;
+    }
+    .custom-underline::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0%;
+        height: 2px;
+        background-color: #7c3aed;
+        transition: width 0.4s ease-in-out;
+    }
+    .custom-underline:hover::after {
+        width: 100%;
+    }
+    .fade-in {
+        animation: fadeIn 5s ease-out;
+    }
+    .border-hsla {
+        @apply border border-white/20;
+    }
+    .special-font b {
+        font-family: 'Zentry';
+        font-feature-settings: "ss01" on;
+    }
+    .bento-tilt_1 {
+        @apply relative border-hsla col-span-2 overflow-hidden rounded-md transition-transform duration-300 ease-out;
+    }
+    .bento-tilt_2 {
+        @apply relative col-span-1 row-span-1 overflow-hidden rounded-md transition-transform duration-300 ease-out;
+    }
+    .bento-title {
+        @apply uppercase md:text-6xl text-4xl font-black font-zentry;
+    }
+    .bento-subtitle {
+        @apply uppercase md:text-3xl text-xl font-black font-zentry;
+    }
+    .animated-title {
+        @apply flex flex-col gap-1 text-7xl uppercase leading-[.8] text-white  md:text-[6rem];
+    }
+    .animated-subtitle {
+        @apply flex flex-col gap-1 text-lg uppercase  text-white  md:text-[2rem];
+    }
+    .animated-word {
+        @apply special-font font-zentry font-black opacity-0;
+        transform: translate3d(10px, 51px, -60px) rotateY(60deg) rotateX(-40deg);
+        transform-origin: 50% 50% -150px !important;
+        will-change: opacity, transform;
+    }
+
+    .floating-nav {
+        @apply sm:hidden md:flex bg-gray-700 rounded-lg border;
+    }
+
+}
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
+}
+
