--- a/app/globals.css
+++ b/app/globals.css
@@ -159,7 +159,7 @@ body {
         @apply flex flex-col gap-1 text-lg uppercase  text-white  md:text-[2rem];
     }
     .animated-word {
-        @apply special-font font-zentry font-black opacity-0;
+        @apply special-font font-zentry font-black opacity-0 text-white;
         transform: translate3d(10px, 51px, -60px) rotateY(60deg) rotateX(-40deg);
         transform-origin: 50% 50% -150px !important;
         will-change: opacity, transform;
